--- a/cpp-step-by-step-project/step5/makefile-out
+++ b/cpp-step-by-step-project/step5/makefile-out
@@ -2,12 +2,12 @@ CC = g++
 CFLAGS = -Wall -g -c
 INCLUDE = -I.
 
-OBJS = bank-account-system4.o main.o
+OBJS = bank-account-system5.o main.o
 
 all : main
 
 %.o : %.cpp
-	$(CC) $(INCLUDE) $(CFLAGS) $<
+	$(CC) $(INCLUDE) $(CFLAGS) $&lt;
 
 main : $(OBJS)
 	$(CC) -o $@ $(OBJS)
